<resources>
    <string name="app_name">Wonderple</string>

    <string name="crash_toast_text">Crash</string>

    <string name="str_permission_message_camera">To use those functions, you need authorizations for camera storage space. please change permission in a setting</string>
    <string name="str_confirm">확인</string>
    <string name="str_close">close</string>
    <string name="str_next">next</string>
    <string name="str_setting">setting</string>
    <string name="str_take_picture_from_camera">사진 촬영</string>
    <string name="str_take_picture_from_gallery">앨범에서 선택</string>
    <string name="str_check_gps_title">Location Services settings</string>
    <string name="str_check_gps_message">Wireless Network, Wi-fi, and GPS must all be in use to accurately find your location. Would you like to turn on these settings now?</string>
    <string name="str_cancel">취소</string>
    <string name="str_ok">Ok</string>
    <string name="str_login_btn_kakao">카카오톡 로그인</string>
    <string name="str_login_btn_facebook">페이스북 로그인</string>
    <string name="str_login_btn_email">이메일 로그인</string>
    <string name="str_or">또는</string>
    <string name="str_login_email_edittext_hint">이메일</string>
    <string name="str_login_password_edittext_hint">비밀번호</string>
    <string name="str_login_btn">로그인</string>
    <string name="str_login_find_password">비밀번호를 잊으셨나요?</string>
    <string name="str_login_join">회원가입</string>
    <string name="str_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="str_signup_policy">회원가입을 하시면 개인정보 취급방침, 이용 약관에\n동의한 것으로 간주됩니다.</string>
    <string name="str_signup_policy_event_text">개인정보 취급방침, 이용 약관</string>
    <string name="str_signup_email">이메일 주소를 입력하세요</string>
    <string name="str_signup_nickname">닉네임을 입력하세요</string>
    <string name="str_signup_password">비밀번호를 입력하세요</string>
    <string name="str_signup_passwrod_comfirm">비밀번호 확인</string>
    <string name="str_find_password">비밀번호 찾기</string>
    <string name="str_find_password_guide">가입하신 이메일로 임시 비밀번호가 발송됩니다.</string>
    <string name="str_warning_email">이메일 형식을 확인해주세요</string>
    <string name="str_warning_nickname">닉네임을 2자 이상 20자 이하로 입력해주세요</string>
    <string name="str_warning_not_same">비밀번호가 일치하지 않습니다</string>
    <string name="str_find_password_input_email">이메일 주소를 입력하세요</string>
    <string name="str_warning_pw_min_8">비밀번호는 8자 이상 15자 이하로 입력해주세요.</string>
    <string name="str_warning_pw_rule_01">공백은 사용할 수 없습니다</string>
    <string name="str_warning_pw_rule_02">영문 대문자, 소문자, 숫자, 특수문자 중\n최소 2가지 이상의 문자조합으로 구성해주세요</string>
    <string name="str_email_certification_guide"> 으로 인증메일이 전송되었습니다.\n입력하신 이메일을 확인하시고\n인증버튼을 통해\n가입을 완료해주시기 바랍니다.\n\n*인증 유효시간은 24시간 입니다.</string>
    <string name="str_signup_toast_email">이미 존재하는 이메일 입니다</string>
    <string name="str_signup_toast_name">이미 존재하는 닉네임 입니다</string>
    <string name="str_find_password_toast_email">가입되지 않은 이메일 입니다</string>
    <string name="str_find_password_toast_certification">이메일 인증을 먼저 진행하세요</string>
    <string name="str_home_default_display_guide">팔로잉 하는 유저와 내가 올린 원더플한 포스팅이\n최신 업데이트 순으로 보여집니다.</string>
    <string name="str_home_btn_browse">둘러보기</string>
    <string name="str_post_detail_wonderple_count">원더플 %1$s개</string>
    <string name="str_post_detail_wonder_count">원더 %1$s개</string>
    <string name="str_post_detail_comment_count">댓글 %1$s개</string>
    <string name="str_post_detail_comment_send">전송</string>
    <string name="str_post_detail_pre_comment_all_see">이전 댓글 모두보기</string>
    <string name="str_post_detail_comment_dday">%1$s일 전</string>
    <string name="str_follow_unfollow">팔로우하기/언팔로우하기</string>
    <string name="str_report">신고하기</string>
    <string name="str_post_report">게시물 신고</string>
    <string name="str_report_option_1">선정적입니다.</string>
    <string name="str_report_option_2">초상권을 침해합니다.</string>
    <string name="str_report_option_3">스팸 게시물입니다.</string>
    <string name="str_report_option_4">불쾌한 내용입니다.</string>
    <string name="str_report_option_5">무단 광고물입니다.</string>
    <string name="str_report_option_6">불법적인 내용입니다.</string>
    <string name="str_report_option_7">기타</string>
    <string name="str_revise_report_already_call_in_post">이미 신고가 된 게시물입니다.</string>
    <string name="str_revise_report">신고항목을 수정하시겠습니까?</string>
    <string name="str_return_report">신고철회</string>
    <string name="str_revise">수정하기</string>
    <string name="str_delete">삭제하기</string>
    <string name="str_undo">Undo</string>
    <string name="str_remove_comment">댓글이 삭제되었습니다. 복구를 원하시면 터치하세요.</string>
    <string name="str_comment_report">댓글 신고</string>
    <string name="str_comment_report_option2">스팸 댓글입니다.</string>
    <string name="str_comment_revise_already_call_in">이미 신고가 된 댓글입니다.</string>
    <string name="str_wonder_guide">마음에 드는 메이크업을 원더하세요!</string>
    <string name="str_posting">포스팅</string>
    <string name="str_wonders">원더스</string>
    <string name="str_follower">팔로워</string>
    <string name="str_following">팔로잉</string>
    <string name="str_post_delete">게시물 삭제</string>
    <string name="str_set_profile_image">프로필 사진으로 설정</string>
    <string name="str_do_remove_post">게시물을 삭제하시겠습니까?</string>
    <string name="str_do_set_profile_image">프로필사진으로 설정하시겠습니까?</string>
    <string name="str_rotate">회전</string>
    <string name="str_flip">대칭</string>
    <string name="str_brightness">밝기</string>
    <string name="str_contrast">대비</string>
    <string name="str_temperature">온도</string>
    <string name="str_dark_background">배경어둡게</string>
    <string name="str_lip">입술(%1$s)</string>
    <string name="str_eye">눈(%1$s)</string>
    <string name="str_eyebrow">눈썹(%1$s)</string>
    <string name="str_cheek">볼(%1$s)</string>
    <string name="str_contour">윤곽(%1$s)</string>
    <string name="str_skin">피부표현(%1$s)</string>
    <string name="str_today">오늘</string>
    <string name="str_before_days">%1$s일 전</string>
    <string name="str_before_weeks">%1$s주 전</string>
    <string name="str_before_month">%1$s달 전</string>
    <string name="str_before_years">%1$s년 전</string>
    <string name="str_pouch">%1$s의 파우치</string>
    <string name="str_count_post_wonder">%1$d posts, %2$d wonders</string>
    <string name="str_count_talk">%1$d Talks</string>
    <string name="str_count_brand_search">브랜드 %1$d개 검색</string>
    <string name="str_count_item_search">아이템 %1$d개 검색</string>
    <string name="str_brand_item_name">[%1$s] %2$s</string>

    <string name="str_news_like">사진을 좋아합니다</string>
    <string name="str_news_followed">팔로우하기 시작했습니다</string>
    <string name="str_news_wonder">메이크업을 스크랩했습니다</string>
    <string name="str_news_approval_follow">팔로우 요청을 승인했습니다</string>
    <string name="str_news_comment">댓글을 남겼습니다</string>
    <string name="str_news_item_talk">톡을 남겼습니다</string>

    <string name="policy_privacy_url">http://easterbunny.co.kr/policy/privacy.html</string>
    <string name="policy_service_url">http://easterbunny.co.kr/policy/service.html</string>
    <string name="policy_operation_url">http://easterbunny.co.kr/policy/operation.html</string>


    <string name="activity_splash">SplashActivity</string>
    <string name="activity_login">LoginActivity</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="dlg_error">Error</string>

    <string name="tab_gallery">라이브러리</string>
    <string name="tab_photo">카메라</string>
    <string name="tab_privacy">개인정보 취급방침</string>
    <string name="tab_terms_use">이용 약관</string>
    <string name="tab_policy">운영 정책</string>

    <string name="tab_filter">필터</string>
    <string name="tab_adjust">수정</string>

    <string name="gallery_no_media_found">No media found</string>

    <string name="toolbar_bt_next">Next</string>
    <string name="toolbar_title_editor">Editor</string>
    <!--ICON-->
    <string name="icon_back_md" translatable="false">Z</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
