<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="commentRevise" type="kr.co.easterbunny.wonderple.dialog.CommentReviseOptionDialog"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/dlg_follow_report_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="@dimen/dlg_follow_report_width"
        android:paddingLeft="24dp">

        <kr.co.easterbunny.wonderple.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_comment_revise_already_call_in"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:customFont="Roboto-Medium"
            android:layout_marginTop="22dp"/>

        <kr.co.easterbunny.wonderple.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_revise_report"
            style="@style/BlackMedium16"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/dlg_report_btn_width"
                android:layout_height="@dimen/dlg_report_btn_height"
                android:text="@string/str_cancel"
                style="@style/BlackMedium16"
                android:gravity="center"
                android:onClick="@{commentRevise.onClick}"/>

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:id="@+id/btn_return_report"
                android:layout_width="@dimen/dlg_report_btn_width"
                android:layout_height="@dimen/dlg_report_btn_height"
                android:text="@string/str_return_report"
                style="@style/BlackMedium16"
                android:gravity="center"
                android:layout_marginLeft="21dp"
                android:onClick="@{commentRevise.onClick}"/>

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:id="@+id/btn_revise"
                android:layout_width="@dimen/dlg_report_btn_width"
                android:layout_height="@dimen/dlg_report_btn_height"
                android:text="@string/str_revise"
                android:textColor="@color/btn_tv_color"
                style="@style/BlackMedium16"
                android:gravity="center"
                android:layout_marginLeft="21dp"
                android:onClick="@{commentRevise.onClick}"/>


        </LinearLayout>

    </LinearLayout>
</layout>