<?xml version="1.0" encoding="utf-8"?>


    <merge xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <kr.co.easterbunny.wonderple.view.CustomTextView
            android:id="@+id/mIconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/icon_back_md"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            app:customFont="Custom-Font"/>

        <kr.co.easterbunny.wonderple.view.CustomTextView
            android:id="@+id/mTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@id/mIconBack"
            android:paddingBottom="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:customFont="Roboto-Regular"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:id="@+id/mIconNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/toolbar_bt_next"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:customFont="Roboto-Regular"/>

        </LinearLayout>

    </merge>
