<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="report" type="kr.co.easterbunny.wonderple.dialog.ReportDialog"/>
    </data>

    <LinearLayout
        android:layout_width="@dimen/dlg_follow_report_width"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dlg_follow_report_width"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <kr.co.easterbunny.wonderple.view.CustomTextView
            android:id="@+id/customTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_post_report"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:customFont="Roboto-Medium"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/customTextView2"
            android:layout_marginStart="24dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:text="@string/str_report_option_1"
                style="@style/BlackMedium16"
                android:id="@+id/option1"
                android:onClick="@{report.onClick}" />

            <RadioButton
                android:id="@+id/img_option1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:button="@drawable/btn_set_off"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/option1"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:id="@+id/option2"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:text="@string/str_report_option_2"
                android:onClick="@{report.onClick}"
                style="@style/BlackMedium16" />

            <RadioButton
                android:id="@+id/img_option2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:button="@drawable/btn_set_off" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/option2"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:text="@string/str_report_option_3"
                style="@style/BlackMedium16"
                android:id="@+id/option3"
                android:onClick="@{report.onClick}" />

            <RadioButton
                android:id="@+id/img_option3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:button="@drawable/btn_set_off" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/option3"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp">


            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:text="@string/str_report_option_4"
                style="@style/BlackMedium16"
                android:onClick="@{report.onClick}"
                android:id="@+id/option4" />

            <RadioButton
                android:id="@+id/img_option4"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:button="@drawable/btn_set_off" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/option4"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:text="@string/str_report_option_5"
                style="@style/BlackMedium16"
                android:id="@+id/option5"
                android:onClick="@{report.onClick}" />

            <RadioButton
                android:id="@+id/img_option5"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:button="@drawable/btn_set_off"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/option5"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:text="@string/str_report_option_6"
                style="@style/BlackMedium16"
                android:onClick="@{report.onClick}"
                android:id="@+id/option6"/>

            <RadioButton
                android:id="@+id/img_option6"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:button="@drawable/btn_set_off"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/option6"
            android:id="@+id/customTextView9"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_report_option_7"
                style="@style/BlackMedium16" />

            <EditText
                android:id="@+id/option7"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="내용을 적어주세요"
                android:textColorHint="@color/text_hint"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="12dp"/>

            <RadioButton
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:button="@drawable/btn_set_off"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:id="@+id/img_option7" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="74dp"
                android:layout_height="36dp"
                android:text="@string/str_cancel"
                android:gravity="center"
                style="@style/BlackMedium16"
                android:layout_marginLeft="52dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customTextView9"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:id="@+id/btn_cancel"
                android:onClick="@{report.onClick}"
                android:layout_marginStart="52dp" />

            <kr.co.easterbunny.wonderple.view.CustomTextView
                android:layout_width="74dp"
                android:layout_height="36dp"
                android:text="@string/str_confirm"
                android:gravity="center"
                android:textColor="@color/btn_tv_color"
                style="@style/BlackMedium16"
                app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
                android:layout_marginLeft="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:id="@+id/btn_ok"
                android:onClick="@{report.onClick}"
                android:layout_marginStart="60dp" />

        </LinearLayout>

        


    </LinearLayout>
</layout>